--- a/compose.yml
+++ b/compose.yml
@@ -39,13 +39,22 @@ services:
     # デバッグ時にキーボード入力ができるようにする
     stdin_open: true
 
+  nginx:
+    image: nginx:1.19-alpine
+    ports:
+      - 8080:8080
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - prism
+
   prism:
     image: stoplight/prism:latest
-    command: 'mock -h 0.0.0.0 /tmp/openapi.yml'
+    command: 'mock --host 0.0.0.0 /tmp/openapi.yml'
     volumes:
       - ./openapi/openapi.yml:/tmp/openapi.yml:ro
     ports:
-      - '8080:4010'
+      - "4010:4010"
 
 volumes:
   mysql_data:
